--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "version": "21.3.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/facebook/jest.git"
+    "url": "https://github.com/Sneezoo/babel-7-jest.git"
   },
   "scripts": {
     "build": "babel src/ -d build",
-    "postinstall": "npm run build"
+    "prepublish": "npm run build"
   },
   "license": "MIT",
   "main": "build/index.js",
